# sky_scrapper

./: .gitignore  docker-compose.yaml  test.json
app/backend/: .pdm.toml  pyproject.toml
app/backend/app/: main.py  run_web_scrapper.py
app/backend/app/api/dependencies/: dep_web_scrapper.py
app/backend/app/config/: cookies.json
app/backend/app/models/: web_scrapper.py
app/backend/app/services/cookie_manager/: cookie_extractor.py  decryptor.py
app/backend/app/services/scrapper/: chrome_driver.py  sky_scrapper.py  spider.py
app/backend/scripts/: extract_cookies.bat  run_web_scrapper.bat
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  run_web_scrapper.py
backend/app/api/dependencies/: dep_locations.py  dep_web_scrapper.py
backend/app/api/routers/: locations.py  web_scrapper.py
backend/app/config/: .~lock.iata_codes.csv#  Cookies.db
backend/app/services/cookie_manager/: encryption_data.py
backend/app/services/scrapper/: chrome_driver.py  iata_mapper.py  sky_scrapper.py  spider.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.js
frontend/src/assets/css/: main.css
frontend/src/assets/video/: video.ogv  video.webm
frontend/src/components/: Button.js  ChildrenAndBaggage.js  CountrySelect.js  CustomListItem.js  DatePicker.js  DropDown.js  DropDownDiv.js  ItemCounter.js  Jumbotron.js  Navbar.js
frontend/src/pages/: Home.js
